# Hermes-Backchannel

./: .gitignore  DESIGN.md  README.md  pyproject.toml
agentipc/: __init__.py  daemon.py  session.py
examples/: two_agents.py
systemd/: agentipc@.service
