[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentipc"
version = "0.1.0"
description = "Sub-millisecond inter-agent communication over Unix domain sockets — zero open ports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pyzmq>=25"]

[project.scripts]
agentc = "agentipc.cli:main"
agentipcd = "agentipc.daemon:main"
